# esp32-app

./: ._CMakeLists.txt  .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old  tool_set_config.json
examples/DHT22/: CMakeLists.txt
examples/DHT22/main/: main.c
examples/DS3231/: CMakeLists.txt
examples/DS3231/main/: main.c
examples/ESP32Wifi/: CMakeLists.txt
examples/ESP32Wifi/main/: main.c
examples/Humidity/: CMakeLists.txt
examples/Humidity/main/: main.c
examples/RGBLed/: CMakeLists.txt
examples/RGBLed/main/: main.c
examples/RelayCtl/: CMakeLists.txt
examples/RelayCtl/main/: main.c
examples/SoilEnvSensor/: CMakeLists.txt
examples/SoilEnvSensor/main/: main.c
examples/WifiClent/: CMakeLists.txt
examples/WifiClent/main/: main.c
examples/WifiWeb/: CMakeLists.txt
examples/WifiWeb/main/: CMakeLists.txt  app_nvs.c  http_server.c  http_server.h  main.c  main.h  wifi_app.c  wifi_app.h
examples/modbus-xy-md03/: CMakeLists.txt
examples/modbus-xy-md03/main/: main.c
main/: CMakeLists.txt  DHT22.c  DHT22.h  Kconfig.projbuild  app_nvs.c  app_nvs.h  aws_iot.c  aws_iot.h  ds3231.c  ds3231.h  http_server.c  http_server.h  i2cdev.c  i2cdev.h  main.c  rgb_led.c  rgb_led.h  sensor_controller.c  sensor_controller.h  sntp_time_sync.c  tasks_common.h  water_ctl.c  water_ctl.h  water_humidity_oneshot.c  water_humidity_oneshot.h  wifi_app.c  wifi_app.h
main/certs/: certificate_pem_crt  private_pem_key
main/webpage/: app.css  app.js  index.html
sensor-node/: .gitignore  CMakeLists.txt  sdkconfig.sample
sensor-node/main/: CMakeLists.txt  main.c  main.h  task_settings.h
sensor-node/main/actuators/: rgb_led.c  rgb_led.h
sensor-node/main/bluetooth/: bt_sensor_client.c  bt_sensor_client.h
sensor-node/main/http/: http_client.c  http_client.h
sensor-node/main/network/: wifi_sta.c  wifi_sta.h
sensor-node/main/sensors/: dht22.c  sensor_task.c  sensor_task.h
web-server/: CMakeLists.txt  partitions.csv  sdkconfig.sample
web-server/main/: CMakeLists.txt  app_nvs.c  app_nvs.h  aws_iot.c  http_server.c  http_server.h  http_server_monitor.c  http_server_monitor.h  i2cdev.c  main.c  main.h  relay.c  sensor_cache.c  sensor_cache.h  sntp_time_sync.c  sntp_time_sync.h  task_settings.h  water_humidity_oneshot.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
web-server/main/actuators/: irrigation_ctrl.c  irrigation_ctrl.h  relay.c  relay.h  rgb-led.c  rgb-led.h
web-server/main/bluetooth/: bt_sensor_server.c  bt_sensor_server.h
web-server/main/http/: http_server.c  http_server.h  http_server_monitor.c  http_server_monitor.h  http_server_ota.c  http_server_relay.c  http_server_static.c  http_server_status.c  http_server_wifi.c
web-server/main/network/: rtc_ds3231.c  rtc_ds3231.h  time_sync.c  time_sync.h  wifi_app.c  wifi_app.h
web-server/main/sensors/: dht22.c  dht22.h  sensor_cache.c  sensor_cache.h
web-server/main/storage/: app_nvs.c  app_nvs.h  water_config.c  water_config.h
web-server/main/webpage/: app.css  app.js  index.html
web-server1/: CMakeLists.txt
web-server1/main/: DHT22.c  sensor_controller.c
web-server1/main/webpage/: app.css  app.js
