idf_component_register(SRCS "actuators/relay.c" "http/http_server_monitor.c" "sensors/sensor_cache.c" "sensors/soil_moisture_adc.c" "main.c"
                             "storage/app_nvs.c"
                             "http/http_server.c"
                             "http/http_server_relay.c"
                             "http/http_server_static.c"
                             "http/http_server_status.c"
                             "http/http_server_wifi.c"
                             "network/wifi_app.c"
                             "actuators/rgb-led.c"
                             "sensors/dht22.c"
                    INCLUDE_DIRS "." "http" "network" "storage" "sensors" "actuators"
                    EMBED_FILES "webpage/app.css" "webpage/app.js" "webpage/favicon.ico" "webpage/index.html" "webpage/jquery-3.3.1.min.js")